src/gparse.output
Terminals unused in grammar

   COMMENTS
   INT_ASSIGNS
   INITINTS
   INTEGERS


Grammar

    0 $accept: input $end

    1 input: input line
    2      | line

    3 line: '\n'
    4     | END '\n'
    5     | GRAPH '\n'
    6     | edges '\n'
    7     | node '\n'
    8     | NAME ID '\n'
    9     | INPUTS inputs '\n'
   10     | OUTPUTS outputs '\n'
   11     | INTERNAL internals '\n'
   12     | ATACS VARIABLES variables '\n'
   13     | DUMMYS dummys '\n'
   14     | ATACS DUMMYS dummys '\n'
   15     | ATACS FAILTRANS failtrans '\n'
   16     | ATACS NONDISABLING nondisabling '\n'
   17     | ATACS KEEPS keeps '\n'
   18     | ATACS ABSTRACTS abstracts '\n'
   19     | ATACS NONINPS noninps '\n'
   20     | ATACS CONTINUOUS continuous '\n'
   21     | ATACS PROPERTY property '\n'
   22     | ATACS INIT_STATE init_state '\n'
   23     | ATACS MARKING marking '\n'
   24     | ATACS INITRATES init_rates '\n'
   25     | ATACS INITVALS init_vals '\n'
   26     | ATACS RATES rates '\n'
   27     | ATACS INVARIANTS invariants '\n'
   28     | ATACS ENABLINGS enables '\n'
   29     | ATACS ASSIGNS assigns '\n'
   30     | ATACS RATE_ASSIGNS rate_assigns '\n'
   31     | ATACS DELAY_ASSIGNS delay_assigns '\n'
   32     | ATACS PRIORITY_ASSIGNS priority_assigns '\n'
   33     | ATACS TRANS_RATES transition_rates '\n'
   34     | ATACS BOOL_ASSIGNS bool_assigns '\n'
   35     | MARKING marking '\n'
   36     | ATACS VERIFY '{' vevents '}' '\n'

   37 @1: /* empty */

   38 line: ATACS SEARCH @1 '{' sevents '}' '\n'

   39 inputs: /* empty */
   40       | inputs ID

   41 outputs: /* empty */
   42        | outputs ID

   43 internals: /* empty */
   44          | internals ID

   45 variables: /* empty */
   46          | variables ID

   47 variable: ID

   48 dummys: /* empty */
   49       | dummys ID
   50       | dummys ID '+'
   51       | dummys ID '-'

   52 failtrans: /* empty */
   53          | failtrans ID

   54 nondisabling: /* empty */
   55             | nondisabling ID

   56 keeps: /* empty */
   57      | keeps ID

   58 abstracts: /* empty */
   59          | abstracts ID

   60 noninps: /* empty */
   61        | noninps ID

   62 continuous: /* empty */
   63           | continuous ID
   64           | continuous ID '[' '-' INF ',' '-' INTEGER ']'
   65           | continuous ID '[' '-' INTEGER ',' '-' INTEGER ']'
   66           | continuous ID '[' '-' INF ',' INTEGER ']'
   67           | continuous ID '[' '-' INTEGER ',' INTEGER ']'
   68           | continuous ID '[' INTEGER ',' INTEGER ']'
   69           | continuous ID '[' '-' INF ',' INF ']'
   70           | continuous ID '[' '-' INTEGER ',' INF ']'
   71           | continuous ID '[' INTEGER ',' INF ']'

   72 property: probproperty
   73         | props

   74 probproperty: hsf
   75             | Pr relop REAL '{' probprop '}'
   76             | Pr '=' '?' '{' probprop '}'
   77             | Ss relop REAL '{' probproperty '}'
   78             | Ss '=' '?' '{' probproperty '}'

   79 probprop: PG bound '(' probproperty ')'
   80         | PF bound '(' probproperty ')'
   81         | PX '(' probproperty ')'
   82         | probproperty PU bound probproperty

   83 props: prop andprop
   84      | prop orprop
   85      | prop impliesprop
   86      | prop

   87 andprop: andprop '&' prop
   88        | '&' prop

   89 orprop: orprop '|' prop
   90       | '|' prop

   91 impliesprop: impliesprop '-' '>' prop
   92            | '-' '>' prop

   93 prop: fronttype bound '(' prop ')'
   94     | fronttype bound '(' hsf ')'
   95     | midprop

   96 midprop: '{' propinner '}'

   97 propinner: prop midtype bound prop
   98          | prop midtype bound hsf
   99          | hsf midtype bound prop
  100          | hsf midtype bound hsf

  101 fronttype: AG
  102          | AF
  103          | EG
  104          | EF

  105 midtype: AU
  106        | EU

  107 bound: '[' relop hsf ']'
  108      | '[' hsf ',' hsf ']'
  109      | /* empty */

  110 init_state: '[' INTEGER ']'
  111           | '[' ID ']'
  112           | '[' ']'

  113 place: ID

  114 marking: '{' marking_set '}'

  115 marking_set: marking_set mark
  116            | mark

  117 mark: '<' signal_trans ',' signal_trans '>'
  118     | '<' place ',' signal_trans '>'
  119     | '<' signal_trans ',' place '>'
  120     | '<' place ',' place '>'
  121     | place
  122     | '<' place '=' INTEGER '>'
  123     | '<' place '=' '-' INTEGER '>'
  124     | '<' place '=' '[' '-' INF ',' '-' INTEGER ']' '>'
  125     | '<' place '=' '[' '-' INTEGER ',' '-' INTEGER ']' '>'
  126     | '<' place '=' '[' '-' INF ',' INTEGER ']' '>'
  127     | '<' place '=' '[' '-' INTEGER ',' INTEGER ']' '>'
  128     | '<' place '=' '[' INTEGER ',' INTEGER ']' '>'
  129     | '<' place '=' '[' '-' INF ',' INF ']' '>'
  130     | '<' place '=' '[' '-' INTEGER ',' INF ']' '>'
  131     | '<' place '=' '[' INTEGER ',' INF ']' '>'

  132 init_rates: '{' init_rates_set '}'

  133 init_rates_set: init_rates_set init_rate
  134               | /* empty */

  135 init_rate: '<' variable '=' INTEGER '>'
  136          | '<' variable '=' '-' INTEGER '>'
  137          | '<' variable '=' '[' '-' INF ',' '-' INTEGER ']' '>'
  138          | '<' variable '=' '[' '-' INTEGER ',' '-' INTEGER ']' '>'
  139          | '<' variable '=' '[' '-' INF ',' INTEGER ']' '>'
  140          | '<' variable '=' '[' '-' INTEGER ',' INTEGER ']' '>'
  141          | '<' variable '=' '[' INTEGER ',' INTEGER ']' '>'
  142          | '<' variable '=' '[' '-' INF ',' INF ']' '>'
  143          | '<' variable '=' '[' '-' INTEGER ':' INF ']' '>'
  144          | '<' variable '=' '[' INTEGER ',' INF ']' '>'

  145 init_vals: '{' init_vals_set '}'

  146 init_vals_set: init_vals_set init_val
  147              | /* empty */

  148 init_val: '<' variable '=' INTEGER '>'
  149         | '<' variable '=' '-' INTEGER '>'
  150         | '<' variable '=' '[' '-' INF ',' '-' INTEGER ']' '>'
  151         | '<' variable '=' '[' '-' INTEGER ',' '-' INTEGER ']' '>'
  152         | '<' variable '=' '[' '-' INF ',' INTEGER ']' '>'
  153         | '<' variable '=' '[' '-' INTEGER ',' INTEGER ']' '>'
  154         | '<' variable '=' '[' INTEGER ',' INTEGER ']' '>'
  155         | '<' variable '=' '[' '-' INF ',' INF ']' '>'
  156         | '<' variable '=' '[' '-' INTEGER ',' INF ']' '>'
  157         | '<' variable '=' '[' INTEGER ',' INF ']' '>'

  158 rates: '{' rate_set '}'

  159 rate_set: rate_set trate
  160         | /* empty */

  161 trate: '<' place '=' INTEGER '>'
  162      | '<' place '=' '[' INTEGER ',' INTEGER ']' '>'

  163 invariants: '{' invariant_set '}'

  164 invariant_set: invariant_set invariant
  165              | /* empty */

  166 invariant: '<' place '=' '[' hsf_ineqs ']' '>'

  167 edges: edge

  168 edge: edge node
  169     | node node
  170     | node node ATACS cons expr plow pup lower upper rate weight
  171     | node node ATACS cons exprd plow pup lower upper rate weight

  172 cons: /* empty */
  173     | '{' ID '}'

  174 expr: /* empty */
  175     | '(' hsf ')'

  176 hsf: hsf '|' andexpr
  177    | hsf IMPLIC andexpr
  178    | andexpr

  179 andexpr: andexpr '&' relation
  180        | relation

  181 relation: '~' relation
  182         | BIT '(' arithexpr ',' arithexpr ')'
  183         | arithexpr relop arithexpr
  184         | arithexpr

  185 arithexpr: arithexpr '+' multexpr
  186          | arithexpr '-' multexpr
  187          | multexpr

  188 multexpr: multexpr ID
  189         | multexpr '*' term
  190         | multexpr '/' term
  191         | multexpr '%' term
  192         | multexpr '^' term
  193         | term

  194 term: '(' hsf ')'
  195     | RATE '(' ID ')'
  196     | INT '(' hsf ')'
  197     | ID
  198     | '-' term
  199     | BOOL_FALSE
  200     | BOOL_TRUE
  201     | unop '(' arithexpr ')'
  202     | binop '(' arithexpr ',' arithexpr ')'
  203     | INTEGER
  204     | REAL
  205     | INF

  206 relop: '='
  207      | '<'
  208      | '<' '='
  209      | '>'
  210      | '>' '='

  211 unop: NOT
  212     | EXPONENTIAL
  213     | CHISQ
  214     | LAPLACE
  215     | CAUCHY
  216     | RAYLEIGH
  217     | POISSON
  218     | BERNOULLI
  219     | BOOL
  220     | FLOOR
  221     | CEIL

  222 binop: OR
  223      | AND
  224      | XOR
  225      | UNIFORM
  226      | NORMAL
  227      | GAMMA
  228      | LOGNORMAL
  229      | BINOMIAL
  230      | MINF
  231      | MAXF
  232      | IDIV

  233 ineqs: ineqs ';' ineq
  234      | ineq

  235 hsf_ineqs: hsf_ineqs ';' hsf
  236          | hsf

  237 rate_ineqs: rate_ineqs ';' rate_ineq
  238           | rate_ineq

  239 ineq: place ASSIGN hsf

  240 rate_ineq: place ASSIGN hsf

  241 exprd: '(' hsf DISABLE

  242 plow: /* empty */
  243     | '/' INTEGER
  244     | '\\' INTEGER
  245     | '/' '-' INTEGER
  246     | '\\' '-' INTEGER
  247     | '/' '-' INF
  248     | '\\' '-' INF

  249 pup: /* empty */
  250    | ';' '-' INTEGER '\\'
  251    | ';' '-' INTEGER '/'
  252    | ';' INTEGER '\\'
  253    | ';' INTEGER '/'
  254    | ';' INF '\\'
  255    | ';' INF '/'

  256 lower: /* empty */
  257      | '[' INTEGER

  258 upper: /* empty */
  259      | ',' INTEGER ']'
  260      | ',' INF ']'

  261 rate: /* empty */
  262     | REAL

  263 weight: /* empty */
  264       | INTEGER

  265 node: signal_trans
  266     | place

  267 signal_trans: ID '+'
  268             | ID '+' '/' INTEGER
  269             | ID '-'
  270             | ID '-' '/' INTEGER

  271 enables: '{' enable_set '}'

  272 enable_set: enable_set enable
  273           | /* empty */

  274 enable: '<' node '=' '[' hsf_ineqs ']' '>'

  275 assigns: '{' assign_set '}'

  276 assign_set: assign_set assign
  277           | /* empty */

  278 assign: '<' node '=' '[' ineqs ']' '>'

  279 rate_assigns: '{' rate_assign_set '}'

  280 rate_assign_set: rate_assign_set rate_assign
  281                | /* empty */

  282 rate_assign: '<' node '=' '[' rate_ineqs ']' '>'

  283 delay_assigns: '{' delay_assign_set '}'

  284 delay_assign_set: delay_assign_set delay_assign
  285                 | /* empty */

  286 delay_assign: '<' node '=' UNIFORM '(' INTEGER ',' INTEGER ')' '>'
  287             | '<' node '=' UNIFORM '(' INTEGER ',' INF ')' '>'
  288             | '<' node '=' EXPONENTIAL '(' hsf ')' '>'
  289             | '<' node '=' '[' INTEGER ',' INTEGER ']' '>'
  290             | '<' node '=' '[' INTEGER ',' INF ']' '>'
  291             | '<' node '=' INTEGER '>'
  292             | '<' node '=' '[' hsf ']' '>'

  293 priority_assigns: '{' priority_assign_set '}'

  294 priority_assign_set: priority_assign_set priority_assign
  295                    | /* empty */

  296 priority_assign: '<' node '=' '[' hsf ']' '>'

  297 transition_rates: '{' transition_rate_set '}'

  298 transition_rate_set: transition_rate_set transition_rate
  299                    | /* empty */

  300 transition_rate: '<' node '=' '[' hsf ']' '>'

  301 bool_assigns: '{' bool_assign_set '}'

  302 bool_assign_set: bool_assign_set bool_assign
  303                | /* empty */

  304 bool_assign: '<' node '=' '[' bool_ineqs ']' '>'

  305 bool_ineqs: bool_ineqs ';' bool_ineq
  306           | bool_ineq

  307 bool_ineq: ID ASSIGN hsf

  308 vevents: vevents ',' vevent
  309        | vevent

  310 vevent: ID
  311       | NOT ID
  312       | signal_trans
  313       | NOT signal_trans

  314 sevents: sevents ',' sevent
  315        | sevent

  316 sevent: ID
  317       | NOT ID
  318       | signal_trans
  319       | NOT signal_trans


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    25 26 27 28 29 30 31 32 33 34 35 36 38
'%' (37) 191
'&' (38) 87 88 179
'(' (40) 79 80 81 93 94 175 182 194 195 196 201 202 241 286 287 288
')' (41) 79 80 81 93 94 175 182 194 195 196 201 202 286 287 288
'*' (42) 189
'+' (43) 50 185 267 268
',' (44) 64 65 66 67 68 69 70 71 108 117 118 119 120 124 125 126 127
    128 129 130 131 137 138 139 140 141 142 144 150 151 152 153 154
    155 156 157 162 182 202 259 260 286 287 289 290 308 314
'-' (45) 51 64 65 66 67 69 70 91 92 123 124 125 126 127 129 130 136
    137 138 139 140 142 143 149 150 151 152 153 155 156 186 198 245
    246 247 248 250 251 269 270
'/' (47) 190 243 245 247 251 253 255 268 270
':' (58) 143
';' (59) 233 235 237 250 251 252 253 254 255 305
'<' (60) 117 118 119 120 122 123 124 125 126 127 128 129 130 131 135
    136 137 138 139 140 141 142 143 144 148 149 150 151 152 153 154
    155 156 157 161 162 166 207 208 274 278 282 286 287 288 289 290
    291 292 296 300 304
'=' (61) 76 78 122 123 124 125 126 127 128 129 130 131 135 136 137
    138 139 140 141 142 143 144 148 149 150 151 152 153 154 155 156
    157 161 162 166 206 208 210 274 278 282 286 287 288 289 290 291
    292 296 300 304
'>' (62) 91 92 117 118 119 120 122 123 124 125 126 127 128 129 130
    131 135 136 137 138 139 140 141 142 143 144 148 149 150 151 152
    153 154 155 156 157 161 162 166 209 210 274 278 282 286 287 288
    289 290 291 292 296 300 304
'?' (63) 76 78
'[' (91) 64 65 66 67 68 69 70 71 107 108 110 111 112 124 125 126 127
    128 129 130 131 137 138 139 140 141 142 143 144 150 151 152 153
    154 155 156 157 162 166 257 274 278 282 289 290 292 296 300 304
'\\' (92) 244 246 248 250 252 254
']' (93) 64 65 66 67 68 69 70 71 107 108 110 111 112 124 125 126 127
    128 129 130 131 137 138 139 140 141 142 143 144 150 151 152 153
    154 155 156 157 162 166 259 260 274 278 282 289 290 292 296 300
    304
'^' (94) 192
'{' (123) 36 38 75 76 77 78 96 114 132 145 158 163 173 271 275 279
    283 293 297 301
'|' (124) 89 90 176
'}' (125) 36 38 75 76 77 78 96 114 132 145 158 163 173 271 275 279
    283 293 297 301
'~' (126) 181
error (256)
IDIV (258) 232
MINF (259) 230
MAXF (260) 231
FLOOR (261) 220
CEIL (262) 221
COMMENTS (263)
ID (264) 8 40 42 44 46 47 49 50 51 53 55 57 59 61 63 64 65 66 67 68
    69 70 71 111 113 173 188 195 197 267 268 269 270 307 310 311 316
    317
INPUTS (265) 9
OUTPUTS (266) 10
INTERNAL (267) 11
GRAPH (268) 5
END (269) 4
INTEGER (270) 64 65 66 67 68 70 71 110 122 123 124 125 126 127 128
    130 131 135 136 137 138 139 140 141 143 144 148 149 150 151 152
    153 154 156 157 161 162 203 243 244 245 246 250 251 252 253 257
    259 264 268 270 286 287 289 290 291
MARKING (271) 23 35
NAME (272) 8
INIT_STATE (273) 22
DUMMYS (274) 13 14
ATACS (275) 12 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 33 34 36 38 170 171
DISABLE (276) 241
NOT (277) 211 311 313 317 319
VERIFY (278) 36
SEARCH (279) 38
REAL (280) 75 77 204 262
INF (281) 64 66 69 70 71 124 126 129 130 131 137 139 142 143 144 150
    152 155 156 157 205 247 248 254 255 260 287 290
KEEPS (282) 17
NONINPS (283) 19
ABSTRACTS (284) 18
CONTINUOUS (285) 20
RATES (286) 26
PROPERTY (287) 21
INVARIANTS (288) 27
ENABLINGS (289) 28
ASSIGNS (290) 29
RATE_ASSIGNS (291) 30
DELAY_ASSIGNS (292) 31
PRIORITY_ASSIGNS (293) 32
BOOL_ASSIGNS (294) 34
INT_ASSIGNS (295)
BOOL_FALSE (296) 199
BOOL_TRUE (297) 200
ASSIGN (298) 239 240 307
VARIABLES (299) 12
INITRATES (300) 24
INITVALS (301) 25
INITINTS (302)
Pr (303) 75 76
Ss (304) 77 78
AU (305) 105
EU (306) 106
EG (307) 103
EF (308) 104
AG (309) 101
AF (310) 102
PG (311) 79
PF (312) 80
PU (313) 82
PX (314) 81
INTEGERS (315)
UNIFORM (316) 225 286 287
NORMAL (317) 226
EXPONENTIAL (318) 212 288
GAMMA (319) 227
LOGNORMAL (320) 228
CHISQ (321) 213
LAPLACE (322) 214
CAUCHY (323) 215
RAYLEIGH (324) 216
POISSON (325) 217
BINOMIAL (326) 229
BERNOULLI (327) 218
AND (328) 223
OR (329) 222
XOR (330) 224
IMPLIC (331) 177
TRANS_RATES (332) 33
FAILTRANS (333) 15
INT (334) 196
BIT (335) 182
RATE (336) 195
BOOL (337) 219
NONDISABLING (338) 16


Nonterminals, with rules where they appear

$accept (108)
    on left: 0
input (109)
    on left: 1 2, on right: 0 1
line (110)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 38, on right: 1 2
@1 (111)
    on left: 37, on right: 38
inputs (112)
    on left: 39 40, on right: 9 40
outputs (113)
    on left: 41 42, on right: 10 42
internals (114)
    on left: 43 44, on right: 11 44
variables (115)
    on left: 45 46, on right: 12 46
variable (116)
    on left: 47, on right: 135 136 137 138 139 140 141 142 143 144
    148 149 150 151 152 153 154 155 156 157
dummys (117)
    on left: 48 49 50 51, on right: 13 14 49 50 51
failtrans (118)
    on left: 52 53, on right: 15 53
nondisabling (119)
    on left: 54 55, on right: 16 55
keeps (120)
    on left: 56 57, on right: 17 57
abstracts (121)
    on left: 58 59, on right: 18 59
noninps (122)
    on left: 60 61, on right: 19 61
continuous (123)
    on left: 62 63 64 65 66 67 68 69 70 71, on right: 20 63 64 65 66
    67 68 69 70 71
property (124)
    on left: 72 73, on right: 21
probproperty (125)
    on left: 74 75 76 77 78, on right: 72 77 78 79 80 81 82
probprop (126)
    on left: 79 80 81 82, on right: 75 76
props (127)
    on left: 83 84 85 86, on right: 73
andprop (128)
    on left: 87 88, on right: 83 87
orprop (129)
    on left: 89 90, on right: 84 89
impliesprop (130)
    on left: 91 92, on right: 85 91
prop (131)
    on left: 93 94 95, on right: 83 84 85 86 87 88 89 90 91 92 93 97
    98 99
midprop (132)
    on left: 96, on right: 95
propinner (133)
    on left: 97 98 99 100, on right: 96
fronttype (134)
    on left: 101 102 103 104, on right: 93 94
midtype (135)
    on left: 105 106, on right: 97 98 99 100
bound (136)
    on left: 107 108 109, on right: 79 80 82 93 94 97 98 99 100
init_state (137)
    on left: 110 111 112, on right: 22
place (138)
    on left: 113, on right: 118 119 120 121 122 123 124 125 126 127
    128 129 130 131 161 162 166 239 240 266
marking (139)
    on left: 114, on right: 23 35
marking_set (140)
    on left: 115 116, on right: 114 115
mark (141)
    on left: 117 118 119 120 121 122 123 124 125 126 127 128 129 130
    131, on right: 115 116
init_rates (142)
    on left: 132, on right: 24
init_rates_set (143)
    on left: 133 134, on right: 132 133
init_rate (144)
    on left: 135 136 137 138 139 140 141 142 143 144, on right: 133
init_vals (145)
    on left: 145, on right: 25
init_vals_set (146)
    on left: 146 147, on right: 145 146
init_val (147)
    on left: 148 149 150 151 152 153 154 155 156 157, on right: 146
rates (148)
    on left: 158, on right: 26
rate_set (149)
    on left: 159 160, on right: 158 159
trate (150)
    on left: 161 162, on right: 159
invariants (151)
    on left: 163, on right: 27
invariant_set (152)
    on left: 164 165, on right: 163 164
invariant (153)
    on left: 166, on right: 164
edges (154)
    on left: 167, on right: 6
edge (155)
    on left: 168 169 170 171, on right: 167 168
cons (156)
    on left: 172 173, on right: 170 171
expr (157)
    on left: 174 175, on right: 170
hsf (158)
    on left: 176 177 178, on right: 74 94 98 99 100 107 108 175 176
    177 194 196 235 236 239 240 241 288 292 296 300 307
andexpr (159)
    on left: 179 180, on right: 176 177 178 179
relation (160)
    on left: 181 182 183 184, on right: 179 180 181
arithexpr (161)
    on left: 185 186 187, on right: 182 183 184 185 186 201 202
multexpr (162)
    on left: 188 189 190 191 192 193, on right: 185 186 187 188 189
    190 191 192
term (163)
    on left: 194 195 196 197 198 199 200 201 202 203 204 205, on right:
    189 190 191 192 193 198
relop (164)
    on left: 206 207 208 209 210, on right: 75 77 107 183
unop (165)
    on left: 211 212 213 214 215 216 217 218 219 220 221, on right:
    201
binop (166)
    on left: 222 223 224 225 226 227 228 229 230 231 232, on right:
    202
ineqs (167)
    on left: 233 234, on right: 233 278
hsf_ineqs (168)
    on left: 235 236, on right: 166 235 274
rate_ineqs (169)
    on left: 237 238, on right: 237 282
ineq (170)
    on left: 239, on right: 233 234
rate_ineq (171)
    on left: 240, on right: 237 238
exprd (172)
    on left: 241, on right: 171
plow (173)
    on left: 242 243 244 245 246 247 248, on right: 170 171
pup (174)
    on left: 249 250 251 252 253 254 255, on right: 170 171
lower (175)
    on left: 256 257, on right: 170 171
upper (176)
    on left: 258 259 260, on right: 170 171
rate (177)
    on left: 261 262, on right: 170 171
weight (178)
    on left: 263 264, on right: 170 171
node (179)
    on left: 265 266, on right: 7 168 169 170 171 274 278 282 286 287
    288 289 290 291 292 296 300 304
signal_trans (180)
    on left: 267 268 269 270, on right: 117 118 119 265 312 313 318
    319
enables (181)
    on left: 271, on right: 28
enable_set (182)
    on left: 272 273, on right: 271 272
enable (183)
    on left: 274, on right: 272
assigns (184)
    on left: 275, on right: 29
assign_set (185)
    on left: 276 277, on right: 275 276
assign (186)
    on left: 278, on right: 276
rate_assigns (187)
    on left: 279, on right: 30
rate_assign_set (188)
    on left: 280 281, on right: 279 280
rate_assign (189)
    on left: 282, on right: 280
delay_assigns (190)
    on left: 283, on right: 31
delay_assign_set (191)
    on left: 284 285, on right: 283 284
delay_assign (192)
    on left: 286 287 288 289 290 291 292, on right: 284
priority_assigns (193)
    on left: 293, on right: 32
priority_assign_set (194)
    on left: 294 295, on right: 293 294
priority_assign (195)
    on left: 296, on right: 294
transition_rates (196)
    on left: 297, on right: 33
transition_rate_set (197)
    on left: 298 299, on right: 297 298
transition_rate (198)
    on left: 300, on right: 298
bool_assigns (199)
    on left: 301, on right: 34
bool_assign_set (200)
    on left: 302 303, on right: 301 302
bool_assign (201)
    on left: 304, on right: 302
bool_ineqs (202)
    on left: 305 306, on right: 304 305
bool_ineq (203)
    on left: 307, on right: 305 306
vevents (204)
    on left: 308 309, on right: 36 308
vevent (205)
    on left: 310 311 312 313, on right: 308 309
sevents (206)
    on left: 314 315, on right: 38 314
sevent (207)
    on left: 316 317 318 319, on right: 314 315


State 0

    0 $accept: . input $end

    ID        shift, and go to state 1
    INPUTS    shift, and go to state 2
    OUTPUTS   shift, and go to state 3
    INTERNAL  shift, and go to state 4
    GRAPH     shift, and go to state 5
    END       shift, and go to state 6
    MARKING   shift, and go to state 7
    NAME      shift, and go to state 8
    DUMMYS    shift, and go to state 9
    ATACS     shift, and go to state 10
    '\n'      shift, and go to state 11

    input         go to state 12
    line          go to state 13
    place         go to state 14
    edges         go to state 15
    edge          go to state 16
    node          go to state 17
    signal_trans  go to state 18


State 1

  113 place: ID .
  267 signal_trans: ID . '+'
  268             | ID . '+' '/' INTEGER
  269             | ID . '-'
  270             | ID . '-' '/' INTEGER

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20

    $default  reduce using rule 113 (place)


State 2

    9 line: INPUTS . inputs '\n'

    $default  reduce using rule 39 (inputs)

    inputs  go to state 21


State 3

   10 line: OUTPUTS . outputs '\n'

    $default  reduce using rule 41 (outputs)

    outputs  go to state 22


State 4

   11 line: INTERNAL . internals '\n'

    $default  reduce using rule 43 (internals)

    internals  go to state 23


State 5

    5 line: GRAPH . '\n'

    '\n'  shift, and go to state 24


State 6

    4 line: END . '\n'

    '\n'  shift, and go to state 25


State 7

   35 line: MARKING . marking '\n'

    '{'  shift, and go to state 26

    marking  go to state 27


State 8

    8 line: NAME . ID '\n'

    ID  shift, and go to state 28


State 9

   13 line: DUMMYS . dummys '\n'

    $default  reduce using rule 48 (dummys)

    dummys  go to state 29


State 10

   12 line: ATACS . VARIABLES variables '\n'
   14     | ATACS . DUMMYS dummys '\n'
   15     | ATACS . FAILTRANS failtrans '\n'
   16     | ATACS . NONDISABLING nondisabling '\n'
   17     | ATACS . KEEPS keeps '\n'
   18     | ATACS . ABSTRACTS abstracts '\n'
   19     | ATACS . NONINPS noninps '\n'
   20     | ATACS . CONTINUOUS continuous '\n'
   21     | ATACS . PROPERTY property '\n'
   22     | ATACS . INIT_STATE init_state '\n'
   23     | ATACS . MARKING marking '\n'
   24     | ATACS . INITRATES init_rates '\n'
   25     | ATACS . INITVALS init_vals '\n'
   26     | ATACS . RATES rates '\n'
   27     | ATACS . INVARIANTS invariants '\n'
   28     | ATACS . ENABLINGS enables '\n'
   29     | ATACS . ASSIGNS assigns '\n'
   30     | ATACS . RATE_ASSIGNS rate_assigns '\n'
   31     | ATACS . DELAY_ASSIGNS delay_assigns '\n'
   32     | ATACS . PRIORITY_ASSIGNS priority_assigns '\n'
   33     | ATACS . TRANS_RATES transition_rates '\n'
   34     | ATACS . BOOL_ASSIGNS bool_assigns '\n'
   36     | ATACS . VERIFY '{' vevents '}' '\n'
   38     | ATACS . SEARCH @1 '{' sevents '}' '\n'

    MARKING           shift, and go to state 30
    INIT_STATE        shift, and go to state 31
    DUMMYS            shift, and go to state 32
    VERIFY            shift, and go to state 33
    SEARCH            shift, and go to state 34
    KEEPS             shift, and go to state 35
    NONINPS           shift, and go to state 36
    ABSTRACTS         shift, and go to state 37
    CONTINUOUS        shift, and go to state 38
    RATES             shift, and go to state 39
    PROPERTY          shift, and go to state 40
    INVARIANTS        shift, and go to state 41
    ENABLINGS         shift, and go to state 42
    ASSIGNS           shift, and go to state 43
    RATE_ASSIGNS      shift, and go to state 44
    DELAY_ASSIGNS     shift, and go to state 45
    PRIORITY_ASSIGNS  shift, and go to state 46
    BOOL_ASSIGNS      shift, and go to state 47
    VARIABLES         shift, and go to state 48
    INITRATES         shift, and go to state 49
    INITVALS          shift, and go to state 50
    TRANS_RATES       shift, and go to state 51
    FAILTRANS         shift, and go to state 52
    NONDISABLING      shift, and go to state 53


State 11

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 12

    0 $accept: input . $end
    1 input: input . line

    $end      shift, and go to state 54
    ID        shift, and go to state 1
    INPUTS    shift, and go to state 2
    OUTPUTS   shift, and go to state 3
    INTERNAL  shift, and go to state 4
    GRAPH     shift, and go to state 5
    END       shift, and go to state 6
    MARKING   shift, and go to state 7
    NAME      shift, and go to state 8
    DUMMYS    shift, and go to state 9
    ATACS     shift, and go to state 10
    '\n'      shift, and go to state 11

    line          go to state 55
    place         go to state 14
    edges         go to state 15
    edge          go to state 16
    node          go to state 17
    signal_trans  go to state 18


State 13

    2 input: line .

    $default  reduce using rule 2 (input)


State 14

  266 node: place .

    $default  reduce using rule 266 (node)


State 15

    6 line: edges . '\n'

    '\n'  shift, and go to state 56


State 16

  167 edges: edge .
  168 edge: edge . node

    ID  shift, and go to state 1

    $default  reduce using rule 167 (edges)

    place         go to state 14
    node          go to state 57
    signal_trans  go to state 18


State 17

    7 line: node . '\n'
  169 edge: node . node
  170     | node . node ATACS cons expr plow pup lower upper rate weight
  171     | node . node ATACS cons exprd plow pup lower upper rate weight

    ID    shift, and go to state 1
    '\n'  shift, and go to state 58

    place         go to state 14
    node          go to state 59
    signal_trans  go to state 18


State 18

  265 node: signal_trans .

    $default  reduce using rule 265 (node)


State 19

  267 signal_trans: ID '+' .
  268             | ID '+' . '/' INTEGER

    '/'  shift, and go to state 60

    $default  reduce using rule 267 (signal_trans)


State 20

  269 signal_trans: ID '-' .
  270             | ID '-' . '/' INTEGER

    '/'  shift, and go to state 61

    $default  reduce using rule 269 (signal_trans)


State 21

    9 line: INPUTS inputs . '\n'
   40 inputs: inputs . ID

    ID    shift, and go to state 62
    '\n'  shift, and go to state 63


State 22

   10 line: OUTPUTS outputs . '\n'
   42 outputs: outputs . ID

    ID    shift, and go to state 64
    '\n'  shift, and go to state 65


State 23

   11 line: INTERNAL internals . '\n'
   44 internals: internals . ID

    ID    shift, and go to state 66
    '\n'  shift, and go to state 67


State 24

    5 line: GRAPH '\n' .

    $default  reduce using rule 5 (line)


State 25

    4 line: END '\n' .

    $default  reduce using rule 4 (line)


State 26

  114 marking: '{' . marking_set '}'

    ID   shift, and go to state 68
    '<'  shift, and go to state 69

    place        go to state 70
    marking_set  go to state 71
    mark         go to state 72


State 27

   35 line: MARKING marking . '\n'

    '\n'  shift, and go to state 73


State 28

    8 line: NAME ID . '\n'

    '\n'  shift, and go to state 74


State 29

   13 line: DUMMYS dummys . '\n'
   49 dummys: dummys . ID
   50       | dummys . ID '+'
   51       | dummys . ID '-'

    ID    shift, and go to state 75
    '\n'  shift, and go to state 76


State 30

   23 line: ATACS MARKING . marking '\n'

    '{'  shift, and go to state 26

    marking  go to state 77


State 31

   22 line: ATACS INIT_STATE . init_state '\n'

    '['  shift, and go to state 78

    init_state  go to state 79


State 32

   14 line: ATACS DUMMYS . dummys '\n'

    $default  reduce using rule 48 (dummys)

    dummys  go to state 80


State 33

   36 line: ATACS VERIFY . '{' vevents '}' '\n'

    '{'  shift, and go to state 81


State 34

   38 line: ATACS SEARCH . @1 '{' sevents '}' '\n'

    $default  reduce using rule 37 (@1)

    @1  go to state 82


State 35

   17 line: ATACS KEEPS . keeps '\n'

    $default  reduce using rule 56 (keeps)

    keeps  go to state 83


State 36

   19 line: ATACS NONINPS . noninps '\n'

    $default  reduce using rule 60 (noninps)

    noninps  go to state 84


State 37

   18 line: ATACS ABSTRACTS . abstracts '\n'

    $default  reduce using rule 58 (abstracts)

    abstracts  go to state 85


State 38

   20 line: ATACS CONTINUOUS . continuous '\n'

    $default  reduce using rule 62 (continuous)

    continuous  go to state 86


State 39

   26 line: ATACS RATES . rates '\n'

    '{'  shift, and go to state 87

    rates  go to state 88


State 40

   21 line: ATACS PROPERTY . property '\n'
